Clean up and improve o.e.m2e.core internals